--- a/global.css
+++ b/global.css
@@ -74,6 +74,7 @@ fieldset{
     border: none;
     padding: 20px;
     padding-left: 30px;
+    width: 60%;
 }
 legend{
     font-size: 24px;
@@ -84,6 +85,31 @@ fieldset div {
   width: 49%;
   box-sizing: border-box;
 }
-label {
+label{
   display: block;
+}
+input{
+    outline: none;
+    border-radius: 5px;
+    margin-bottom: 25px;
+    border-width: 1px;
+    border-color: var(--inputBorder);
+}
+input:active, input:focus-visible{
+    outline: 2px solid blue;
+}
+button{
+    background-color: var(--button);
+    color: white;
+    font-size: 18px;
+    font-weight: 700;
+    border-radius: 10px;
+    width: 180px;
+    height: 50px;
+    margin-left: 30px;
+    margin-top: 30px;
+}
+a{
+    color:var(--button);
+    text-decoration: none;
 }
