--- a/src/global.css
+++ b/src/global.css
@@ -57,59 +57,60 @@ body {
   box-sizing: border-box;
   width: 59%;
 }
-.right p:first-child{
-    padding-top: 100px;
+.right p:first-child {
+  padding-top: 100px;
 }
-.right p{
-    width: 75%;
-    margin-left: 30px;
-    font-size: 24px;
-    font-weight: 750;
+.right p {
+  width: 75%;
+  margin-left: 30px;
+  font-size: 24px;
+  font-weight: 750;
 }
-form{
-    box-shadow: 0px 5px 10px rgba(128, 128, 128, 0.363);
-    margin-top: 80px;
+form {
+  box-shadow: 0px 5px 10px rgba(128, 128, 128, 0.363);
+  margin-top: 80px;
 }
-fieldset{
-    border: none;
-    padding: 20px;
-    padding-left: 30px;
-    width: 60%;
+fieldset {
+  border: none;
+  padding: 20px;
+  padding-left: 30px;
+  width: 60%;
 }
-legend{
-    font-size: 24px;
-    font-weight: 600;
+legend {
+  font-size: 24px;
+  font-weight: 600;
 }
 fieldset div {
   display: inline-block;
   width: 49%;
   box-sizing: border-box;
 }
-label{
+label {
   display: block;
 }
-input{
-    outline: none;
-    border-radius: 5px;
-    margin-bottom: 25px;
-    border-width: 1px;
-    border-color: var(--inputBorder);
+input {
+  outline: none;
+  border-radius: 5px;
+  margin-bottom: 25px;
+  border-width: 1px;
+  border-color: var(--inputBorder);
 }
-input:active, input:focus-visible{
-    outline: 2px solid blue;
+input:active,
+input:focus-visible {
+  outline: 2px solid blue;
 }
-button{
-    background-color: var(--button);
-    color: white;
-    font-size: 18px;
-    font-weight: 700;
-    border-radius: 10px;
-    width: 180px;
-    height: 50px;
-    margin-left: 30px;
-    margin-top: 30px;
+button {
+  background-color: var(--button);
+  color: white;
+  font-size: 18px;
+  font-weight: 700;
+  border-radius: 10px;
+  width: 180px;
+  height: 50px;
+  margin-left: 30px;
+  margin-top: 30px;
 }
-a{
-    color:var(--button);
-    text-decoration: none;
+a {
+  color: var(--button);
+  text-decoration: none;
 }
